fix:removendo text-align

--- a/assets/Css/Styles.css
+++ b/assets/Css/Styles.css
@@ -51,7 +51,7 @@ background: #000000;
 }
 .TopInfocardDescription{
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     padding: 0 52px;
     font-size: 16px;
     line-height: 24px;
